[build-system]
requires = ["setuptools>=40.8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gigaam"
version = "0.1.0"
description = "GigaAM: A package for audio modeling and ASR."
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "GigaChat Team"},
]
license = {text = "MIT"}
dependencies = [
    "hydra-core<=1.3.2",
    "numpy",
    "omegaconf<=2.3.0",
    "pydub<=0.25.1",
    "sentencepiece<=0.2.0",
    "torch<=2.5.1",
    "torchaudio<=2.5.1",
    "onnx==1.17.0",
    "onnxruntime==1.17.3",
    "tqdm",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
longform = [
    "pyannote.audio",
    "pydub",
]

[project.urls]
Homepage = "https://github.com/salute-developers/GigaAM/"
Repository = "https://github.com/salute-developers/GigaAM/"